<resources>
    <string name="app_name">E-Heady</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_menu_home">Home</string>
    <string name="label_menu_search">Search</string>
    <string name="image">image</string>
    <string name="filter_by">Filter By</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="offline">You are in offline  mode,Please active the network connection</string>

</resources>
