<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    android:importantForAccessibility="yes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:scaleType="fitXY"
            android:src="@drawable/product"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/txt_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/color"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp" />

            <TextView
                android:id="@+id/txt_color_value"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/size"
                android:layout_weight="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp" />

            <TextView
                android:id="@+id/txt_size_value"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/price"
                android:layout_weight="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_5sdp" />

            <TextView
                android:id="@+id/txt_price_value"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_call"
            style="@style/innerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/call"
            app:backgroundTint="@color/color_notification_back"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp" />

        <Button
            android:id="@+id/btn_txt"
            style="@style/innerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/message"
            app:backgroundTint="@color/color_notification_back"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp" />

        <Button android:id="@+id/btn_mail"
            style="@style/innerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            app:backgroundTint="@color/color_notification_back"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"/>


    </LinearLayout>




    </LinearLayout>
</androidx.cardview.widget.CardView>
